2013-12-26  Luke Bryan <cobcoder@users.sourceforge.net>

        * strings.cpp : Fix Unstring delimited by all delimiter
		size > 1 issue, see bug #54.

2013-06-12  Sergey Kashyrin <ska@kiska.net>

	* Switch to C++

2010-06-28  Roger While <simrw@sim-basis.de>

	* MARK - Version 2.0
	* Move to GPL/LGPL 3

20??-??-??  Roger While <simrw@sim-basis.de>

	* fileio.c : Implement COB_VARSEQ_FORMAT to override default format
		    for variable length sequential files.

2009-06-09  Roger While <simrw@sim-basis.de>

	* move.c : Fix editing symbol moves

2009-06-01  Roger While <simrw@sim-basis.de>

	* fileio.c : Revise memory algo for SORT - Introduce COB_SORT_CHUNK

2009-05-25  Roger While <simrw@sim-basis.de>

	* General : Remove the following extraneous include files:
		    byteswap.h, call.h, fileio.h, intrinsic.h, move.h, numeric.h,
		    screenio.h, strings.h, termio.h by integration into common.h
		    as first step

2009-05-16  Roger While <simrw@sim-basis.de>

	* General : Changes to remove lib local symbols
	* common.c, fileio.c : Fix to enable running test suite under Win

2009-05-11  Roger While <simrw@sim-basis.de>

	* fileio.[ch] : Implement file status 24 for relative files
	* termio.c, screenio.c : Implement ACCEPT OMITTED
	* fileio.[ch] : Change all I/O except L/S to file descriptor basis

2009-05-01  Roger While <simrw@sim-basis.de>

	* General : Code clean/sanitize

2009-04-10  Roger While <simrw@sim-basis.de>

	* General : Support for icc
	* fileio.c : Sanitize / remove BDB < 4.1 support
	* fileio.[ch] : Support LOCK clause on OPEN

2009-02-23  Roger While <simrw@sim-basis.de>

	* screenio.c : Fix up accept without lines parameter

2009-02-03  Roger While <simrw@sim-basis.de>

	* intrinsic.c : Fix Cygwins busted rand function

2009-01-27  Roger While <simrw@sim-basis.de>

	* call.c : Change hyphen interpretation

2009-01-22  Roger While <simrw@sim-basis.de>

	* intrinsic.[ch] : Functions CONCATENATE and SUBSTITUTE-CASE
